added user functions

--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>SB Admin Angular14 BS5</title>
+        <title>Gerenciador RCC</title>
         <base href="/" />
 
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="icon" type="image/x-icon" href="favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="https://rccshop.com.br/loja/media/favicon/default/faviconrcc.ico" />
     </head>
     <body>
         <app-root>
